# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Editor/: res
Platform/Windows/Common/: CursorManager.cpp  CursorManager.h  MainWindow.cpp  MainWindow.h  PlatformWindowsSeriallizer.pb.cc  PlatformWindowsSeriallizer.pb.h  TabWindow.cpp  TabWindow.h  ViewWindow.cpp  ViewWindow.h  WinEnviroment.cpp  WinEnviroment.h  WinResources.cpp  WinResources.h
Platform/Windows/Common/Base/: DoubleBufferedWindow.cpp  DoubleBufferedWindow.h  EventDispatcher.cpp  EventDispatcher.h  GUIWindow.cpp  GUIWindow.h  Window.cpp  Window.h  WindowContainer.cpp  WindowContainer.h
Platform/Windows/Common/Control/: UINode.cpp  UINode.h
Platform/Windows/Common/Control/Button/: ImageButton.cpp  ImageButton.h  TabButton.cpp  TabButton.h  TwoStateButton.cpp  TwoStateButton.h
Platform/Windows/Common/Control/Image/: SelectableImage.cpp  SelectableImage.h  SimpleImage.cpp  SimpleImage.h
Platform/Windows/Common/Control/Text/: StaticText.cpp  StaticText.h
Platform/Windows/Editor/: CMakeLists.txt  EditorMainWindow.cpp  EditorMainWindow.h  main.cpp
Platform/Windows/Editor/HierarchyWindow/: HierarchyWindow.cpp  HierarchyWindow.h
Platform/Windows/Editor/InspectorWindow/: InspectorWindow.cpp  InspectorWindow.h
Platform/Windows/Editor/Menu/: MenuItemDefine.h  PopupMenuButton.cpp  PopupMenuButton.h
Platform/Windows/Editor/ProjectWindow/: ProjectWindow.cpp  ProjectWindow.h
Platform/Windows/Editor/SceneWindow/: SceneWindow.cpp  SceneWindow.h
Platform/Windows/Editor/TopMenuWindow/: TopMenuWindow.cpp  TopMenuWindow.h
Platform/Windows/Editor/TopToolsWindow/: TopToolsWindow.cpp  TopToolsWindow.h
Platform/Windows/Player/: CMakeLists.txt  main.cpp
Resources/: CMakeLists.txt  res
Resources/src/: main.cpp
Runtime/: BattleFirePrefix.h
Runtime/Allocator/: AliceMemory.h  DefaultAllocator.cpp  DefaultAllocator.h  MemoryLabel.h
Runtime/Allocator/tlsf/: tlsf.c
Runtime/Debugger/: Logger.cpp  Logger.h
Runtime/IO/: AliceData.cpp  AliceData.h  FileItem.cpp  FileItem.h  FileSystem.cpp  FileSystem.h  ResourceManager.cpp  ResourceManager.h
Runtime/String/: FixedString.cpp  FixedString.h  StringUtils.cpp  StringUtils.h
Runtime/Utils/: LinkedList.h  SmartPtr.h  TTree.cpp  TTree.h
Tools/: PlatformWindowsSeriallizer.proto  buildSerillizer.bat
