set(PROJECT_NAME "BattleFirePlayer")
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/External/Box2D/include)
include_directories(${PROJECT_SOURCE_DIR}/External/PBC/src)
include_directories(${PROJECT_SOURCE_DIR}/External/Lua5.1.4/src)
include_directories(${PROJECT_SOURCE_DIR}/External/PhysX3.4/PhysX_3.4/Include)
include_directories(${PROJECT_SOURCE_DIR}/External/PhysX3.4/PxShared/include)
include_directories(${PROJECT_SOURCE_DIR}/External/zlib)
include_directories(${PROJECT_SOURCE_DIR}/External/LuaSocket/src)
include_directories(${PROJECT_SOURCE_DIR}/External/LibZipRel/lib)
include_directories(${PROJECT_SOURCE_DIR}/External/LibZipRel/build)
include_directories(${PROJECT_SOURCE_DIR}/External/LibCurl/include)
include_directories(${PROJECT_SOURCE_DIR}/External/FreeType/include)
GroupDirectories("" "" ${PROJECT_SOURCE_DIR}/Runtime common_runtime_sources)
GroupDirectories("" "" ${PROJECT_SOURCE_DIR}/Platform/Windows/Player winplayer_sources)
GroupDirectories("" "" ${PROJECT_SOURCE_DIR}/Platform/Windows/Common win_common_sources)

set(WinPlayerSources ${common_runtime_sources} ${winplayer_sources} ${win_common_sources})

add_compile_definitions(ALICE_WIN_PLAYER _DEBUG UNICODE _UNICODE _SCL_SECURE_NO_WARNINGS _CRT_SECURE_NO_WARNINGS)

set(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /DNDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Ob0 /Od /RTC1")
set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /W3 /GR /EHsc")
set(CMAKE_C_FLAGS_RELEASE "/MT /O2 /Ob2 /DNDEBUG")
set(CMAKE_C_FLAGS_DEBUG "/MTd /Zi /Ob0 /Od /RTC1")
set(CMAKE_C_FLAGS "/DWIN32 /D_WINDOWS /W3")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")

link_directories(${PROJECT_SOURCE_DIR}/External/PrebuiltLibs/x86)
add_executable(${PROJECT_NAME} ${WinPlayerSources})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "WinPlayer")
target_link_libraries(${PROJECT_NAME} gdiplus libprotobuf Imm32)